<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AC Land Kishorganj Sadar</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">About</string>
    <string name="action_refresh">Refresh</string>
    <string name="search_hint">Type to Search</string>
    <string name="search_label">Search</string>
    <string name="total_items">Total Items : </string>
    <string name="search_results">Search Results: </string>
    <string name="no_result_found">No Results</string>
    <string name="no_internet_text">There is no network available. Would you like to visit the network settings page to set one up?</string>
    <string name="sync_now">Would you like to sync with latest data?</string>
    <string name="no_internet_header">No Internet Available</string>
    <string name="button_internet_Settings">Network Settings</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="about">About</string>
    <string name="detail">Detail</string>
    <string name="about_us">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. ...</string>
    <string name="version_name">Version Name: </string>
    <string name="release_date">Release Date: </string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="mouja_no">মৌজা</string>
    <string name="union_no">তহশিল </string>
    <string name="daag_no">দাগ নাম্বার লিখুন</string>
    <string name="rs">আর,এস</string>
    <string name="sa">এস,এ</string>
    <string name="none">তথ্য প্রদান করুন।</string>
    <string name="insert_dag">দাগ নম্বরটি লিখুন</string>
    <string name="waiting_text">অপেক্ষা করুন...</string>
    <string name="not_available"> দাগ নম্বরটি খাস তালিকা ভুক্ত নয়</string>
    <string name="available"> দাগ নম্বরটি খাস তালিকাভুক্ত।</string>
    <string name="information">তথ্য প্রদান করুন।</string>
    <string name="information_changed">তথ্য পরিবর্তীত হয়েছে</string>
    <string name="information_add">তথ্য সংযোজিত হচ্ছে</string>
    <string name="search_error">দাগ নম্বরটি লিখুন</string>
    <string name="tohshil_error">তহশিল নির্বাচন করুন</string>
    <string name="mouja_error">মৌজা নির্বাচন করুন</string>
    <string name="tohshil_mouza_error">মৌজা এবং তহশিল নির্বাচন করুন</string>
    <string name="error_toast">আপনার ইনটারনেট সংযোগটি কাজ করছে না। পুনোরায় চেষ্টা করুন।</string>
    <string name="chut">ছুট</string>

    <!-- Temporary String -->
    <string name="maijkhapon">মাইজখাপন</string>


    <string name="powered_by">powered by <a href="http://binarycraft.org">binarycraft.org</a></string>

    <string name="con_title">Attention!!</string>
    <string name="con_message">You need Internet connectivity to use ACLand</string>
    <string name="settings">Settings</string>
    <string name="dismiss">Exit</string>

</resources>