<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="40dp">

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/spUnion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/union_no"
        android:textColorHint="@color/gray_backshow"
        app:met_floatingLabel="normal"/>

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/spMouza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/mouja_no"
        android:textColorHint="@color/gray_backshow"
        app:met_floatingLabel="normal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="100">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="5" />

        <com.binarycraft.acland.customcontrols.FloatingHintEditText
            android:id="@+id/etSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="75"
            android:elevation="2dp"
            android:hint="@string/insert_dag"
            android:textColorHint="@color/gray_aaa"
            android:inputType="text"
            android:maxLength="4"
            android:singleLine="true" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="5" />

        <LinearLayout
            android:id="@+id/llSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:background="@drawable/ic_search_selector"
            android:elevation="2dp"
            android:gravity="center"
            android:padding="5dp">

            <ImageView
                android:id="@+id/ivSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search_sel" />
        </LinearLayout>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rgDaagType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:divider="@color/gray_aaa"
        android:gravity="center"
        android:dividerPadding="10dp">
        <RadioButton
            android:id="@+id/rbSa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:checked="true"
            android:text="@string/sa"/>
        <RadioButton
            android:id="@+id/rbRs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rs"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/customborder"
        android:elevation="5dp"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/pbSearch"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/none"
                    android:textColor="@color/colorPrimaryDark"
                    android:visibility="gone"/>
                <TextView
                    android:id="@+id/tvStatusResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/none"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />
            </LinearLayout>
            <ProgressBar
                android:id="@+id/pbSearch"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:visibility="gone"/>
        </RelativeLayout>

    </LinearLayout>
<!--    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvPoweredby"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:autoLink="web"
            android:linksClickable="true"
            android:textColor="@color/gray_aaa"
            android:text="@string/powered_by"/>
    </RelativeLayout>-->

</LinearLayout>